--- a/firstBook/_sources/dummy_part/chapter.ipynb
+++ b/firstBook/_sources/dummy_part/chapter.ipynb
@@ -5,7 +5,7 @@
    "id": "c20bffe2-d852-4b42-9c80-e43dbe8ebc45",
    "metadata": {},
    "source": [
-    "# Creating an OPE textbook"
+    "# Example Chapter in a Part"
    ]
   },
   {
@@ -15,31 +15,9 @@
    "source": [
     "An example intro chapter of a part\n",
     "\n",
-    "## Steps\n",
+    "## Overview\n",
     "\n",
-    "1. Create an empty repsitory\n",
-    "2. Download [OPEEFFORT tools repository](https://github.com/OPEFFORT/tools) ", 
-    "\n",
-    "```shell\n",
-    "\n",
-    "cd tools-main\n",
-    "\n",
-    "```\n",
-    "3. Generate an SSH key, using the email associated with your github account\n",
-    "\n",
-    "```shell\n",
-    "\n",
-    "ssh-keygen -t ed25519 rsa -b 4096 -C quote your_email@example.com  quote\n",
-    "\n",
-    "```\n",
-    "4. Copy the SSH key to add to your associated github account: Settings > SSH and GPG keys\n", 
-    "\n",
-    "```shell\n",
-    "\n",
-    "cat ~/.ssh/config/id_rsa.pub\n",
-    "\n",
-    "```\n",
-    "\n"
+    "What a grand adventure we have begun."
    ]
   },
   {
